Fix concurrent modification exception on reload